--- a/src/gnome-shell/gnome-shell.css
+++ b/src/gnome-shell/gnome-shell.css
@@ -70,11 +70,9 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 
 .check-box:focus:checked StBin { background-image: url("checkbox.svg"); }
 
-.toggle-switch { width: 52px; height: 24px; background-size: contain; }
+.toggle-switch { width: 52px; height: 24px; background-size: contain; background-image: url("switch-off.svg"); }
 
-.toggle-switch-us, .toggle-switch-intl { background-image: url("switch-off.svg"); }
-
-.toggle-switch-us:checked, .toggle-switch-intl:checked { background-image: url("switch-on.svg"); }
+.toggle-switch:checked { background-image: url("switch-on.svg"); }
 
 .shell-link { color: #fdc3b9; }
 
@@ -186,7 +184,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 
 .prompt-dialog-password-box { spacing: 1em; padding-bottom: 1em; }
 
-.prompt-dialog-error-label { font-size: 10pt; color: #cc0000; padding-bottom: 8px; }
+.prompt-dialog-error-label { font-size: 10pt; color: #f57900; padding-bottom: 8px; }
 
 .prompt-dialog-info-label { font-size: 10pt; padding-bottom: 8px; }
 
@@ -526,6 +524,8 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 
 .ripple-box:rtl { border-radius: 0 0 0 52px; }
 
+.select-area-rubberband { background-color: rgba(251, 111, 85, 0.3); border: 1px solid #fb6f55; }
+
 .popup-menu-arrow { icon-size: 1.09em; }
 
 .popup-menu-icon { icon-size: 1.09em; }
@@ -674,9 +674,9 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 
 .page-indicator:hover .page-indicator-icon { border-color: white; }
 
-.page-indicator:active .page-indicator-icon { border: none; margin: 2px; background-color: #fff; }
+.page-indicator:active .page-indicator-icon { border: none; margin: 2px; background-color: white; }
 
-.page-indicator:checked .page-indicator-icon, .page-indicator:checked:active { background-color: #fff; }
+.page-indicator:checked .page-indicator-icon, .page-indicator:checked:active .page-indicator-icon { background-color: white; }
 
 .app-well-app > .overview-icon.overview-icon-with-label, .grid-search-result .overview-icon.overview-icon-with-label { padding: 10px 8px 5px 8px; spacing: 4px; }
 
