--- a/src/gnome-shell/gnome-shell.css
+++ b/src/gnome-shell/gnome-shell.css
@@ -268,7 +268,9 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 
 .osd-window .osd-monitor-label { font-size: 3em; }
 
-.osd-window .level { height: 0.6em; border-radius: 0; background-color: rgba(29, 28, 27, 0.5); color: #f2f1f0; }
+.osd-window .level { height: 0.6em; -barlevel-height: 0.6em; -barlevel-background-color: rgba(29, 28, 27, 0.5); -barlevel-active-background-color: #f2f1f0; -barlevel-overdrive-color: #d51010; -barlevel-overdrive-separator-width: 0.2em; }
+
+.osd-window .level-bar { background-color: #f2f1f0; border-radius: 0.3em; }
 
 .pad-osd-window { padding: 32px; background-color: rgba(0, 0, 0, 0.8); }
 
