--- a/src/gtk-3.0/_common.scss
+++ b/src/gtk-3.0/_common.scss
@@ -3259,6 +3259,8 @@ filechooserbutton:drop(active) {
   paned & { &.left, &.right, &.left:dir(rtl), &:dir(rtl), &:dir(ltr), & { border-style: none; }}
 
   separator { background-color: transparent; }
+
+  treeview { background-color: $sidebar_bg_color; }
 }
 
 stacksidebar {
