--- a/src/gtk-3.0/gtk.css
+++ b/src/gtk-3.0/gtk.css
@@ -1323,6 +1323,8 @@ paned .sidebar.left, paned .sidebar.right, paned .sidebar.left:dir(rtl), paned .
 
 .sidebar separator { background-color: transparent; }
 
+.sidebar treeview { background-color: #efefee; }
+
 stacksidebar row { padding: 10px 4px; }
 
 stacksidebar row > label { padding-left: 6px; padding-right: 6px; }
