--- a/src/gtk-3.0/_common.scss
+++ b/src/gtk-3.0/_common.scss
@@ -3260,7 +3260,7 @@ filechooserbutton:drop(active) {
 
   separator { background-color: transparent; }
 
-  treeview { background-color: $sidebar_bg_color; }
+  treeview, treeview:backdrop { background-color: $sidebar_bg_color; }
 }
 
 stacksidebar {
