--- a/src/gtk-3.0/gtk-dark.css
+++ b/src/gtk-3.0/gtk-dark.css
@@ -1313,7 +1313,7 @@ paned .sidebar.left, paned .sidebar.right, paned .sidebar.left:dir(rtl), paned .
 
 .sidebar separator { background-color: transparent; }
 
-.sidebar treeview { background-color: #2b2a29; }
+.sidebar treeview, .sidebar treeview:backdrop { background-color: #2b2a29; }
 
 stacksidebar row { padding: 10px 4px; }
 
