--- a/src/gtk-3.0/_apps.scss
+++ b/src/gtk-3.0/_apps.scss
@@ -270,6 +270,19 @@ window.background.chromium {
 
   // https://github.com/lassekongo83/plano-theme/issues/37
   .shortcuts-pane { border-top: 0; }
+
+  // https://github.com/lassekongo83/amber-theme/issues/18
+  .path-bar {
+    button {
+      box-shadow: none;
+      background: none;
+      border-radius: 0;
+      &:hover, &:checked {
+        box-shadow: inset 0 -3px $selected_bg_color;
+        border-color: transparent;
+      }
+    }
+  }
 }
 
 // Nemo
