--- a/src/gtk-3.0/gtk-dark.css
+++ b/src/gtk-3.0/gtk-dark.css
@@ -1809,6 +1809,10 @@ window.background.chromium menubar { color: #f2f1f0; }
 
 .thunar .shortcuts-pane { border-top: 0; }
 
+.thunar .path-bar button { box-shadow: none; background: none; border-radius: 0; }
+
+.thunar .path-bar button:hover, .thunar .path-bar button:checked { box-shadow: inset 0 -3px #fb6f55; border-color: transparent; }
+
 .nemo-window .nemo-window-pane widget.entry { border: 1px solid; border-radius: 2px; border-color: #fb6f55; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25), 0 2px 3px rgba(0, 0, 0, 0.22), 0 0 0 1px rgba(251, 111, 85, 0.3), 0 0 0 2px rgba(251, 111, 85, 0.1); }
 
 .gedit-search-slider button, .gedit-search-slider button:hover { box-shadow: none; border: 1px solid #1d1c1b; }
