--- a/src/gnome-shell/gnome-shell-sass/_common.scss
+++ b/src/gnome-shell/gnome-shell-sass/_common.scss
@@ -583,6 +583,19 @@ StScrollBar {
 // - odd thing for styling App menu when apparently not running under shell. Light Adwaita styled
 //   app menu inside the main app window itself rather than the top bar
 
+
+// App Icons
+
+// Outline for low res icons
+.lowres-icon {
+  icon-shadow: 0 1px 2px rgba(0,0,0,0.3);
+}
+
+// Drapshadow for large icons
+.icon-dropshadow {
+  icon-shadow: 0 1px 2px rgba(0,0,0,0.4);
+}
+
 // OSD
 .osd-window {
   text-align: center;
@@ -1122,11 +1135,6 @@ StScrollBar {
 
 // a little unstructured mess:
 
-.system-switch-user-submenu-icon {
-  icon-size: 16px;
-  padding: 0 4px;
-}
-
 #appMenu {
   spinner-image: url("process-working.svg");
   spacing: 4px;
@@ -1332,11 +1340,8 @@ StScrollBar {
 
 //search results
 
-#searchResultsBin {
-  max-width: 1000px;
-}
-
 #searchResultsContent {
+  max-width: 1000px;
   padding-left: 20px;
   padding-right: 20px;
   spacing: 16px;
@@ -1439,11 +1444,11 @@ StScrollBar {
 .search-provider-icon,
 .list-search-result {
   @extend %icon_tile;
-  &:active, &:checked { background-color: transparentize(darken($osd_bg_color,10%),.1); }
   &:focus, &:selected, &:hover {
     background-color: transparentize($osd_fg_color,.9);
     transition-duration: 200ms;
   }
+  &:active, &:checked { background-color: transparentize(darken($osd_bg_color,10%),.1); }
 }
 .app-well-app,
 .app-well-app.app-folder,
@@ -1551,7 +1556,6 @@ StScrollBar {
 }
 
 //Some hacks I don't even
-.search-display > StBoxLayout,
 .all-apps,
 .frequent-apps > StBoxLayout {
   // horizontal padding to make sure scrollbars or dash don't overlap content
