Avoid directly coloring labels wherever possible

--- a/src/gtk-3.0/_common.scss
+++ b/src/gtk-3.0/_common.scss
@@ -146,10 +146,8 @@ label {
 
   &.separator {
     @extend .dim-label;
-    color: $fg_color;
   }
 
-  row:selected &,
   &:selected { @extend %nobg_selected_items; }
 
   selection {
@@ -159,8 +157,18 @@ label {
 
   &:disabled {
     color: $insensitive_fg_color;
+    button & { color: inherit; }
+    &:backdrop {
+      color: $backdrop_insensitive_color;
+
+      button & { color: inherit; }
+    }
+
     selection { @extend %selected_items_disabled; }
-    &:backdrop { color: $backdrop_insensitive_color; }
+  }
+
+  &:backdrop {
+    selection { @extend %selected_items_backdrop; }
   }
 }
 
