Fix disabled flat buttons

--- a/src/gtk-3.0/_common.scss
+++ b/src/gtk-3.0/_common.scss
@@ -506,6 +506,7 @@ button {
       @include button(active);
     }
 
+    @at-root %button_basic_flat,
     &.flat { &:disabled { @include button(undecorated); }}
 
     &:disabled {
