--- a/src/gtk-3.0/gtk-dark.css
+++ b/src/gtk-3.0/gtk-dark.css
@@ -185,7 +185,7 @@ notebook > header > tabs > arrow:active:hover, notebook > header > tabs > arrow:
 
 notebook > header > tabs > arrow:active, notebook > header > tabs > arrow:checked, button:active, button:checked { color: #f2f1f0; outline-color: rgba(242, 241, 240, 0.3); background-color: #2f2e2c; box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.08), inset 0 2px rgba(0, 0, 0, 0.04); border-color: #080707; border-bottom-color: #080707; border-top-color: black; }
 
-notebook > header > tabs > arrow.flat:disabled, button.flat:disabled { border-color: transparent; background-color: transparent; background-image: none; box-shadow: none; box-shadow: inset 0 1px rgba(255, 255, 255, 0), 0 1px rgba(242, 241, 240, 0); text-shadow: none; -gtk-icon-shadow: none; }
+notebook > header > tabs > arrow:disabled, button.sidebar-button:disabled, notebook > header > tabs > arrow.flat:disabled, button.flat:disabled { border-color: transparent; background-color: transparent; background-image: none; box-shadow: none; box-shadow: inset 0 1px rgba(255, 255, 255, 0), 0 1px rgba(242, 241, 240, 0); text-shadow: none; -gtk-icon-shadow: none; }
 
 notebook > header > tabs > arrow:disabled, button:disabled { color: #9b9a98; background-color: #555452; text-shadow: none; -gtk-icon-shadow: none; box-shadow: none; border-color: transparent; }
 
