--- a/src/gtk-3.0/gtk.css
+++ b/src/gtk-3.0/gtk.css
@@ -185,7 +185,7 @@ notebook > header > tabs > arrow:active:hover, notebook > header > tabs > arrow:
 
 notebook > header > tabs > arrow:active, notebook > header > tabs > arrow:checked, button:active, button:checked { color: #3C3C3C; outline-color: rgba(60, 60, 60, 0.3); background-color: #cacac7; box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.08), inset 0 2px rgba(0, 0, 0, 0.04); border-color: #a5a5a0; border-bottom-color: #a5a5a0; border-top-color: #8c8c85; }
 
-notebook > header > tabs > arrow.flat:disabled, button.flat:disabled { border-color: transparent; background-color: transparent; background-image: none; box-shadow: none; box-shadow: inset 0 1px rgba(255, 255, 255, 0), 0 1px rgba(255, 255, 255, 0); text-shadow: none; -gtk-icon-shadow: none; }
+notebook > header > tabs > arrow:disabled, button.sidebar-button:disabled, notebook > header > tabs > arrow.flat:disabled, button.flat:disabled { border-color: transparent; background-color: transparent; background-image: none; box-shadow: none; box-shadow: inset 0 1px rgba(255, 255, 255, 0), 0 1px rgba(255, 255, 255, 0); text-shadow: none; -gtk-icon-shadow: none; }
 
 notebook > header > tabs > arrow:disabled, button:disabled { color: #8d8d8c; background-color: #cececc; text-shadow: none; -gtk-icon-shadow: none; box-shadow: none; border-color: transparent; }
 
