--- a/src/gtk-3.0/gtk-dark.css
+++ b/src/gtk-3.0/gtk-dark.css
@@ -729,6 +729,8 @@ popover.background { padding: 2px; border-radius: 2px; background-color: #2b2a29
 
 .csd popover.background, popover.background { border: 1px solid #1d1c1b; }
 
+.csd popover.background { background-clip: padding-box; border-color: rgba(29, 28, 27, 0.9); }
+
 popover.background modelbutton.flat:hover, popover.background checkbutton:hover, popover.background radiobutton:hover, popover.background.menuitem.button.flat:hover { background-color: #fb6f55; color: #ffffff; border-radius: 0; }
 
 popover.background > list, popover.background > .view, popover.background > iconview, popover.background > toolbar { border-style: none; background-color: transparent; }
