--- a/src/gtk-3.0/gtk.css
+++ b/src/gtk-3.0/gtk.css
@@ -737,6 +737,8 @@ popover.background { padding: 2px; border-radius: 2px; background-color: #efefee
 
 .csd popover.background, popover.background { border: 1px solid #b9b9b5; }
 
+.csd popover.background { background-clip: padding-box; border-color: rgba(0, 0, 0, 0.23); }
+
 popover.background modelbutton.flat:hover, popover.background checkbutton:hover, popover.background radiobutton:hover, popover.background.menuitem.button.flat:hover { background-color: #fb6f55; color: #ffffff; border-radius: 0; }
 
 popover.background > list, popover.background > .view, popover.background > iconview, popover.background > toolbar { border-style: none; background-color: transparent; }
