--- a/src/gtk-3.0/gtk-dark.css
+++ b/src/gtk-3.0/gtk-dark.css
@@ -1399,6 +1399,8 @@ paned.vertical > separator.wide { margin: 0; padding: 0; background-repeat: repe
 
 infobar { border-style: none; }
 
+infobar.action:hover > revealer > box { background-color: black; border-bottom: 1px solid #2a2927; }
+
 infobar.info, infobar.question, infobar.warning, infobar.error { text-shadow: none; }
 
 infobar.info:backdrop > revealer > box, infobar.info > revealer > box, infobar.question:backdrop > revealer > box, infobar.question > revealer > box, infobar.warning:backdrop > revealer > box, infobar.warning > revealer > box, infobar.error:backdrop > revealer > box, infobar.error > revealer > box { background-color: black; border-bottom: 1px solid #2a2927; }
