--- a/src/gtk-3.0/gtk.css
+++ b/src/gtk-3.0/gtk.css
@@ -1409,6 +1409,8 @@ paned.vertical > separator.wide { margin: 0; padding: 0; background-repeat: repe
 
 infobar { border-style: none; }
 
+infobar.action:hover > revealer > box { background-color: #afe4ee; border-bottom: 1px solid #c5c5c2; }
+
 infobar.info, infobar.question, infobar.warning, infobar.error { text-shadow: none; }
 
 infobar.info:backdrop > revealer > box, infobar.info > revealer > box, infobar.question:backdrop > revealer > box, infobar.question > revealer > box, infobar.warning:backdrop > revealer > box, infobar.warning > revealer > box, infobar.error:backdrop > revealer > box, infobar.error > revealer > box { background-color: #a7e2ed; border-bottom: 1px solid #c5c5c2; }
