--- a/gtk/src/Amber/gtk-3.0/_common.scss
+++ b/gtk/src/Amber/gtk-3.0/_common.scss
@@ -3755,8 +3755,8 @@ messagedialog { // Message Dialog styling
   &.csd { // rounded bottom border styling for csd version
     &.background {
       // bigger radius for better antialiasing
-      border-bottom-left-radius: $window_radius; //$window_radius+1;
-      border-bottom-right-radius: $window_radius; //$window_radius+1;
+      border-bottom-left-radius: $window_radius+1;
+      border-bottom-right-radius: $window_radius+1;
     }
 
     .dialog-action-area button {
