--- a/gtk/src/Amber/gtk-3.0/_common.scss
+++ b/gtk/src/Amber/gtk-3.0/_common.scss
@@ -2995,7 +2995,7 @@ treeview.view radio:selected { &:focus, & { @extend %radio; }} // This is a work
 //----------//
 %scale_trough {
   border: 1px solid $dark_fill;
-  border-radius: 99px;
+  border-radius: $button_radius + 2;
   background-color: $dark_fill;
 
   &:disabled { background-color: $insensitive_bg_color; }
