--- a/gtk/src/Amber/gtk-3.0/_common.scss
+++ b/gtk/src/Amber/gtk-3.0/_common.scss
@@ -3014,7 +3014,7 @@ treeview.view radio:selected { &:focus, & { @extend %radio; }} // This is a work
 
 %scale_highlight {
   border: 1px solid $progress_bg_color;
-  border-radius: $button_radius;
+  border-radius: $button_radius + 2;
   background-color: $progress_bg_color;
 
   &:disabled {
