--- a/gtk/src/Amber/gtk-3.0/gtk.css
+++ b/gtk/src/Amber/gtk-3.0/gtk.css
@@ -2166,6 +2166,28 @@ XfdesktopIconView.view .rubberband { border-radius: 0; }
 
 .disk-space-display.free.border { color: shade(#eeeeec, 0.7); }
 
+.floating-bar { padding: 1px; background-color: #ffffff; border-width: 1px; border-style: solid solid none; border-color: #b9b9b5; border-radius: 2px 2px 0 0; }
+
+.floating-bar.bottom.left { border-left-style: none; border-top-left-radius: 0; }
+
+.floating-bar.bottom.right { border-right-style: none; border-top-right-radius: 0; }
+
+.floating-bar:backdrop { background-color: #ffffff; border-color: #c0c0bd; }
+
+.floating-bar button { padding: 0px; }
+
+.search-information { background-color: #fb6f55; color: #ffffff; padding: 2px; }
+
+.nautilus-list-view .view.dnd, .nautilus-list-view iconview.dnd { border-style: none; }
+
+flowboxchild:selected { background-color: transparent; }
+
+.icon-background { background-color: black; border-color: #fb6f55; border-style: solid; border-width: 0px; }
+
+flowboxchild > .icon-item-background { padding: 4px; }
+
+flowboxchild:selected > .icon-item-background { padding: 4px; background-color: #fb6f55; border-color: #fb6f55; border-style: solid; border-width: 0px; border-radius: 2px; }
+
 .thunar .standard-view { border-width: 0; }
 
 .thunar .sidebar .view, .thunar .sidebar iconview { background-color: #efefee; }
