--- a/gtk/src/Amber/gtk-3.0/_colors-public.scss
+++ b/gtk/src/Amber/gtk-3.0/_colors-public.scss
@@ -93,6 +93,8 @@ $_wm_highlight: if($variant=='light', $top_hilight,  // Sass gets mad if this is
 
 //FIXME this is really an API
 
+// content view background such as thumbnails view in Photos or Boxes
 @define-color content_view_bg #{"" + $base_color};
 
-
+// Very contrasty background for text views (@theme_text_color foreground)
+@define-color text_view_bg #{"" + if($variant == 'light', $base_color, darken($base_color,6%))};
