--- a/gnome-shell/src/gnome-shell.css
+++ b/gnome-shell/src/gnome-shell.css
@@ -4,41 +4,41 @@
 stage { font-size: 11pt; color: #f2f1f0; }
 
 /* Common Stylings */
-.search-statustext, .no-frequent-applications-label { font-size: 2em; font-weight: bold; color: #f2f1f0; }
+.no-frequent-applications-label, .search-statustext { font-size: 2em; font-weight: bold; color: #f2f1f0; }
 
-.osd-window, .resize-popup, .switcher-list, .workspace-switcher-container { color: #f2f1f0; background-color: rgba(20, 20, 20, 0.96); border: 1px solid rgba(255, 255, 255, 0.16); border-radius: 8px; padding: 12px; }
+.workspace-switcher-container, .switcher-list, .resize-popup, .osd-window { color: #f2f1f0; background-color: rgba(20, 20, 20, 0.96); border: 1px solid rgba(255, 255, 255, 0.16); border-radius: 8px; padding: 12px; }
 
 .workspace-thumbnails { color: #f2f1f0; background-color: rgba(20, 20, 20, 0.76); border: 1px solid rgba(255, 255, 255, 0.16); }
 
-.search-provider-icon, .list-search-result, .app-well-app .overview-icon, .grid-search-result .overview-icon, .show-apps .overview-icon { border-radius: 2px; padding: 6px; border: 2px solid transparent; transition-duration: 75ms; text-align: center; }
+.show-apps .overview-icon, .app-well-app .overview-icon, .grid-search-result .overview-icon, .list-search-result, .search-provider-icon { border-radius: 2px; padding: 6px; border: 2px solid transparent; transition-duration: 75ms; text-align: center; }
 
 .modal-dialog { color: #f2f1f0; background-color: #444240; border: 1px solid #2f2e2c; }
 
-.button, .app-folder-dialog .folder-name-container .edit-folder-button { border-radius: 2px; border-style: solid; border-width: 1px; min-height: 22px; padding: 3px 24px; color: #f2f1f0; background-color: #4c4a47; border-color: #393836; box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.2); text-shadow: 0 1px rgba(0, 0, 0, 0.2); icon-shadow: 0 1px rgba(0, 0, 0, 0.2); }
+.app-folder-dialog .folder-name-container .edit-folder-button, .button { border-radius: 2px; border-style: solid; border-width: 1px; min-height: 22px; padding: 3px 24px; color: #f2f1f0; background-color: #4c4a47; border-color: #393836; box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.2); text-shadow: 0 1px rgba(0, 0, 0, 0.2); icon-shadow: 0 1px rgba(0, 0, 0, 0.2); }
 
-.button:focus, .app-folder-dialog .folder-name-container .edit-folder-button:focus { color: #f2f1f0; text-shadow: 0 1px rgba(0, 0, 0, 0.2); icon-shadow: 0 1px rgba(0, 0, 0, 0.2); box-shadow: inset 0 0 0 2px rgba(251, 111, 85, 0.6); }
+.app-folder-dialog .folder-name-container .edit-folder-button:focus, .button:focus { color: #f2f1f0; text-shadow: 0 1px rgba(0, 0, 0, 0.2); icon-shadow: 0 1px rgba(0, 0, 0, 0.2); box-shadow: inset 0 0 0 2px rgba(251, 111, 85, 0.6); }
 
-.button:hover, .app-folder-dialog .folder-name-container .edit-folder-button:hover { color: #f2f1f0; background-color: #514f4c; border-color: #393836; box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.2); text-shadow: 0 1px rgba(0, 0, 0, 0.2); icon-shadow: 0 1px rgba(0, 0, 0, 0.2); }
+.app-folder-dialog .folder-name-container .edit-folder-button:hover, .button:hover { color: #f2f1f0; background-color: #514f4c; border-color: #393836; box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.2); text-shadow: 0 1px rgba(0, 0, 0, 0.2); icon-shadow: 0 1px rgba(0, 0, 0, 0.2); }
 
-.button:insensitive, .app-folder-dialog .folder-name-container .edit-folder-button:insensitive { color: #9b9a98; border-color: #232221; background-color: #302e2d; box-shadow: none; text-shadow: none; icon-shadow: none; }
+.app-folder-dialog .folder-name-container .edit-folder-button:insensitive, .button:insensitive { color: #9b9a98; border-color: #232221; background-color: #302e2d; box-shadow: none; text-shadow: none; icon-shadow: none; }
 
-.button:active, .app-folder-dialog .folder-name-container .edit-folder-button:active { color: #f2f1f0; background-color: #3c3a39; border-color: #272625; text-shadow: none; icon-shadow: none; box-shadow: none; }
+.app-folder-dialog .folder-name-container .edit-folder-button:active, .button:active { color: #f2f1f0; background-color: #3c3a39; border-color: #272625; text-shadow: none; icon-shadow: none; box-shadow: none; }
 
-.notification-banner .notification-button, .hotplug-notification-item, .modal-dialog .modal-dialog-linked-button { color: #f2f1f0; background-color: #4c4a47; border-color: #393836; box-shadow: none; text-shadow: 0 1px rgba(0, 0, 0, 0.2); icon-shadow: 0 1px rgba(0, 0, 0, 0.2); padding: 12px; border-style: solid; border-width: 1px; border-left-width: 0; border-bottom-width: 0; }
+.modal-dialog .modal-dialog-linked-button, .hotplug-notification-item, .notification-banner .notification-button { color: #f2f1f0; background-color: #4c4a47; border-color: #393836; box-shadow: none; text-shadow: 0 1px rgba(0, 0, 0, 0.2); icon-shadow: 0 1px rgba(0, 0, 0, 0.2); padding: 12px; border-style: solid; border-width: 1px; border-left-width: 0; border-bottom-width: 0; }
 
-.notification-banner .notification-button:insensitive, .hotplug-notification-item:insensitive, .modal-dialog .modal-dialog-linked-button:insensitive { color: #9b9a98; border-color: #232221; background-color: #302e2d; box-shadow: none; text-shadow: none; icon-shadow: none; }
+.modal-dialog .modal-dialog-linked-button:insensitive, .hotplug-notification-item:insensitive, .notification-banner .notification-button:insensitive { color: #9b9a98; border-color: #232221; background-color: #302e2d; box-shadow: none; text-shadow: none; icon-shadow: none; }
 
-.notification-banner .notification-button:hover, .hotplug-notification-item:hover, .modal-dialog .modal-dialog-linked-button:hover { color: #f2f1f0; background-color: #514f4c; border-color: #393836; box-shadow: none; text-shadow: 0 1px rgba(0, 0, 0, 0.2); icon-shadow: 0 1px rgba(0, 0, 0, 0.2); }
+.modal-dialog .modal-dialog-linked-button:hover, .hotplug-notification-item:hover, .notification-banner .notification-button:hover { color: #f2f1f0; background-color: #514f4c; border-color: #393836; box-shadow: none; text-shadow: 0 1px rgba(0, 0, 0, 0.2); icon-shadow: 0 1px rgba(0, 0, 0, 0.2); }
 
-.notification-banner .notification-button:focus, .hotplug-notification-item:focus, .modal-dialog .modal-dialog-linked-button:focus { color: #f2f1f0; text-shadow: 0 1px rgba(0, 0, 0, 0.2); icon-shadow: 0 1px rgba(0, 0, 0, 0.2); box-shadow: inset 0 0 0 2px rgba(251, 111, 85, 0.6); }
+.modal-dialog .modal-dialog-linked-button:focus, .hotplug-notification-item:focus, .notification-banner .notification-button:focus { color: #f2f1f0; text-shadow: 0 1px rgba(0, 0, 0, 0.2); icon-shadow: 0 1px rgba(0, 0, 0, 0.2); box-shadow: inset 0 0 0 2px rgba(251, 111, 85, 0.6); }
 
-.notification-banner .notification-button:active, .hotplug-notification-item:active, .modal-dialog .modal-dialog-linked-button:active { color: #f2f1f0; background-color: #3c3a39; border-color: #272625; text-shadow: none; icon-shadow: none; box-shadow: none; }
+.modal-dialog .modal-dialog-linked-button:active, .hotplug-notification-item:active, .notification-banner .notification-button:active { color: #f2f1f0; background-color: #3c3a39; border-color: #272625; text-shadow: none; icon-shadow: none; box-shadow: none; }
 
-.notification-banner .notification-button:first-child, .hotplug-notification-item:first-child, .modal-dialog .modal-dialog-linked-button:first-child { border-radius: 0 0 0 2px; }
+.modal-dialog .modal-dialog-linked-button:first-child, .hotplug-notification-item:first-child, .notification-banner .notification-button:first-child { border-radius: 0 0 0 2px; }
 
-.notification-banner .notification-button:last-child, .hotplug-notification-item:last-child, .modal-dialog .modal-dialog-linked-button:last-child { border-right-width: 0; border-radius: 0 0 2px 0; }
+.modal-dialog .modal-dialog-linked-button:last-child, .hotplug-notification-item:last-child, .notification-banner .notification-button:last-child { border-right-width: 0; border-radius: 0 0 2px 0; }
 
-.notification-banner .notification-button:first-child:last-child, .hotplug-notification-item:first-child:last-child, .modal-dialog .modal-dialog-linked-button:first-child:last-child { border-radius: 0 0 2px 2px; }
+.modal-dialog .modal-dialog-linked-button:first-child:last-child, .hotplug-notification-item:first-child:last-child, .notification-banner .notification-button:first-child:last-child { border-radius: 0 0 2px 2px; }
 
 /* WIDGETS */
 .shell-link { color: #fdc3b9; }
@@ -668,9 +668,9 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 
 .search-section-content { background-color: rgba(33, 33, 33, 0.76); border-radius: 7px; border: 1px solid rgba(255, 255, 255, 0.16); box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2); text-shadow: 0 1px rgba(0, 0, 0, 0.2); color: #f2f1f0; padding: 18px; spacing: 8px; }
 
-.search-provider-icon:focus, .list-search-result:focus, .search-provider-icon:hover, .list-search-result:hover, .search-provider-icon:selected, .list-search-result:selected { background-color: rgba(242, 241, 240, 0.1); transition-duration: 200ms; }
+.list-search-result:focus, .search-provider-icon:focus, .list-search-result:hover, .search-provider-icon:hover, .list-search-result:selected, .search-provider-icon:selected { background-color: rgba(242, 241, 240, 0.1); transition-duration: 200ms; }
 
-.search-provider-icon:active, .list-search-result:active, .search-provider-icon:checked, .list-search-result:checked { background-color: rgba(0, 0, 0, 0.86); }
+.list-search-result:active, .search-provider-icon:active, .list-search-result:checked, .search-provider-icon:checked { background-color: rgba(0, 0, 0, 0.86); }
 
 .search-provider-icon .list-search-provider-content { spacing: 12px; }
 
@@ -685,7 +685,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 .list-search-result .list-search-result-description { color: #aba59e; }
 
 /* App Grid */
-.icon-grid { -shell-grid-horizontal-item-size: 144px; -shell-grid-vertical-item-size: 144px; spacing: 36px; }
+.icon-grid { -shell-grid-horizontal-item-size: 144px; -shell-grid-vertical-item-size: 144px; spacing: 24px; }
 
 .icon-grid .overview-icon { icon-size: 96px; }
 
