Error labels and entries

--- a/gtk/src/Amber/gtk-3.0/_common.scss
+++ b/gtk/src/Amber/gtk-3.0/_common.scss
@@ -222,6 +222,8 @@ label {
   &:backdrop {
     selection { @extend %selected_items_backdrop; }
   }
+
+  &.error { color: $error_color; }
 }
 
 .dim-label {
@@ -474,6 +476,8 @@ entry {
       + combobox > box > button.combo { border-top-color: $drop_target_color; }
     }
   }
+
+  &.error { color: $error_color; }
 }
 
 treeview entry {
