--- a/gtk/src/Amber/gtk-3.0/gtk.css
+++ b/gtk/src/Amber/gtk-3.0/gtk.css
@@ -56,6 +56,10 @@ button label:disabled:backdrop { color: inherit; }
 
 label.error { color: #cc0000; }
 
+label.error:disabled { color: #7d7d7c; }
+
+label.error:disabled:backdrop { color: #b9b9b5; }
+
 .dim-label, .titlebar:not(headerbar) .subtitle, headerbar .subtitle, label.separator { opacity: 0.55; text-shadow: none; }
 
 assistant .sidebar { background-color: #ffffff; border-top: 1px solid #b9b9b5; }
