--- a/gtk/src/Amber/gtk-3.0/gtk.css
+++ b/gtk/src/Amber/gtk-3.0/gtk.css
@@ -2087,7 +2087,7 @@ XfdesktopIconView.view .label { text-shadow: 1px 1px 2px black; }
 
 XfdesktopIconView.view .rubberband { border-radius: 0; }
 
-#XfceNotifyWindow { background-color: #2a2927; border-radius: 2px; }
+#XfceNotifyWindow { background-color: #2a2927; border-radius: 2px; color: #f6f6f7; }
 
 #XfceNotifyWindow buttonbox { padding: 0; }
 
